name:                distribution
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/robrix/distribution#readme
license:             BSD3
license-file:        LICENSE
author:              Rob Rix
maintainer:          rob.rix@me.com
copyright:           2016 Rob Rix
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Distribution
  build-depends:       base >= 4.7 && < 5
                     , freer-cofreer
                     , random
  default-language:    Haskell2010
  ghc-options:         -Wall -Wno-name-shadowing

test-suite distribution-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , distribution
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/robrix/distribution
